# ugrad

./: Cargo.toml  README.MD
examples/: mnist.rs
src/: main.rs  module.rs  tape.rs  trace.rs
src/back/: mod.rs  wgpu.rs
src/eval/: mod.rs
src/kernel/: binop.wgsl  matmul.wgsl  reduce.wgsl  transpose.wgsl  unop.wgsl
src/optim/: mod.rs
src/ten/: mod.rs  ops.rs  shape.rs
