[package]
name = "ugrad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#Core
fnv = "1.0.7"
rand = "0.8.5"
ndarray = { version = "0.15.6", features = [] }
ndarray-rand = "0.14.0"

thiserror = "1.0.38"
derivative = "2.2.0"
defer = "0.1.0"
implicit-clone = "0.3.5"

#Debug
petgraph = { version = "0.6.3", features = ["graphmap"] }
daggy = "0.8.0"
dot = "0.1.4"

# Wgpu backend
wgpu = { version = "0.15", features = ["trace"]}
bytemuck = { version = "1.13.0", features = ["derive"]}
pollster = "0.3.0"
env_logger = "0.10.0"
futures-intrusive = "0.5.0"


[dev-dependencies]
once_cell = "1.17.1"
mnist = { version = "0.5.0", features = ["download", "flate2"]}